fix for text on dash

--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -4,7 +4,7 @@
             <div class="col-xs-12 col-sm-4">
                 <div class="hpanel hblue" >
                     <div class="panel-body" style="padding: 10px 5px; margin-bottom: -12px;">
-                        <div class="col-xs-8">
+                        <div class="col-xs-8" style="overflow: hidden;">
                             <div class="stats-title pull-left">
                                 <a ui-sref="user.list">
                                     <h3>People
@@ -37,7 +37,7 @@
             <div class="col-xs-12 col-sm-4">
                 <div class="hpanel hnavyblue">
                     <div class="panel-body" style="padding: 10px 5px; margin-bottom: -12px;">
-                        <div class="col-xs-8">
+                        <div class="col-xs-8" style="overflow: hidden;">
                             <div class="stats-title pull-left">
                                 <a ui-sref="company.list">
                                     <h3>Companies
@@ -70,7 +70,7 @@
             <div class="col-xs-12 col-sm-4">
                 <div class="hpanel hgreen">
                     <div class="panel-body" style="padding: 10px 5px; margin-bottom: -12px;">
-                        <div class="col-xs-8">
+                        <div class="col-xs-8" style="overflow: hidden;">
                             <div class="stats-title pull-left">
                                 <a ui-sref="resource.list">
                                     <h3>Resources
