fixed with scope.apply

--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -124,12 +124,12 @@
             </li>
 
             <li class="active" ng-show="global.location.locations && global.community.locations">
-                <a style="cursor:default; margin-left: -7px;"><span>
+                <!--<a style="cursor:default; margin-left: -7px;"><span>
 
                     Locations
 
                 </span>
-                </a>
+                </a>-->
                 <ul class="nav nav-second-level">
                     <li ng-if="!global.community.locations || global.community.locations === {}">
                         <a>No locations yet</a> 
