switched slug to id

--- a/app/components/companies/company.dashboard.profile.html
+++ b/app/components/companies/company.dashboard.profile.html
@@ -34,5 +34,5 @@
     <p style="white-space:pre-wrap;" ng-bind-html="::global.profile.summary"></p>
     <hr>
     <h3 ng-show="global.profile.industries">Markets</h3>
-    <li ng-repeat="industry in global.profile.industries" class="label btn-default skills"><a href="#" ui-sref="search.dashboard({location_path: global.location.slug})">{{::industry}}</a></li>
+    <li ng-repeat="industry in global.profile.industries" class="label btn-default skills"><a href="#" ui-sref="search.dashboard({location_path: global.location.id})">{{::industry}}</a></li>
 </div>
