--- a/app/frontend/ghost/content/themes/nuevo/partials/navigation.hbs
+++ b/app/frontend/ghost/content/themes/nuevo/partials/navigation.hbs
@@ -2,7 +2,7 @@
 <nav class="main-nav" role="navigation">
   <ul style="padding-left: 10px; color: #fff;" id="navlist">
 	  {{#foreach navigation}}
-	    <li class="nav-{{slug}}"><a href="{{url absolute="true"}}" style="float:left; padding-top:20px;">{{#if current}}{{else}}{{label}}{{/if}}</a></li>
+	    <li class="nav-{{id}}"><a href="{{url absolute="true"}}" style="float:left; padding-top:20px;">{{#if current}}{{else}}{{label}}{{/if}}</a></li>
 	  {{/foreach}}
     <li>Get Startup Community Lessons Delivered To Your Inbox:</li>
     <li>
