--- a/app/components/users/user.dashboard.ask.questions.html
+++ b/app/components/users/user.dashboard.ask.questions.html
@@ -2,11 +2,11 @@
     <div class="panel-heading hbuilt">
         <div class="media social-profile clearfix">
             <a class="pull-left">
-                <img class="img-circle m-b" style="height: 65px;" ng-src="{{question.from.avatar || '/public/images/blank_avatar.png'}}" alt="{{question.from.name}}" ui-sref="user.dashboard({location_path: question.from.slug, profile: {}})">
+                <img class="img-circle m-b" style="height: 65px;" ng-src="{{question.from.avatar || '/public/images/blank_avatar.png'}}" alt="{{question.from.name}}" ui-sref="user.dashboard({location_path: question.from.id, profile: {}})">
             </a>
             <div class="media-body">
-                <a class="pull-right" style="font-size: 13px; margin-top: 3px; padding-right: 10px;" ui-sref="user.dashboard({location_path: question.from.slug, profile: {}})">{{question.from.headline}}</a>
-                <p><a style="font-weight:bold; padding-left: 4px;" ui-sref="user.dashboard({location_path: question.from.slug, profile: {}})">{{question.from.name}}</a> asked:</p>
+                <a class="pull-right" style="font-size: 13px; margin-top: 3px; padding-right: 10px;" ui-sref="user.dashboard({location_path: question.from.id, profile: {}})">{{question.from.headline}}</a>
+                <p><a style="font-weight:bold; padding-left: 4px;" ui-sref="user.dashboard({location_path: question.from.id, profile: {}})">{{question.from.name}}</a> asked:</p>
                 <div class="question-content">
                     {{ question.content }}
                 </div>
@@ -19,9 +19,9 @@
         </div>
         <div class="social-form">
             <form ng-submit="profile.postReply(question)">
-                <input class="form-control input-md" ng-disabled="!global.user" placeholder="Write a reply.." ng-model="profile.reply[question.slug]" required>
+                <input class="form-control input-md" ng-disabled="!global.user" placeholder="Write a reply.." ng-model="profile.reply[question.id]" required>
             </form>
-            <div loading-bars ng-show="profile.working[question.slug]" style="text-align:center; margin-left: -50px; margin-top: 10px;"></div>
+            <div loading-bars ng-show="profile.working[question.id]" style="text-align:center; margin-left: -50px; margin-top: 10px;"></div>
         </div>
     </div>
 </div>
