--- a/app/components/users/user.invite.html
+++ b/app/components/users/user.invite.html
@@ -16,12 +16,12 @@
                         <input type="text" placeholder="Optional message.." class="form-control input-lg" name="message" ng-model="invite.form.message_value">
                     </div>
                     <table class="form-group" style="font-size: 20px; font-weight:300;">
-                        <tr ng-repeat="k in invite.resources" ng-if="k.community_profiles[global.location.slug]">
+                        <tr ng-repeat="k in invite.resources" ng-if="k.community_profiles[global.location.id]">
                             <td style="width:20px;">
-                                <input type="checkbox" class="form-control checkbox" ng-model="invite.form.resources[k.slug]">
+                                <input type="checkbox" class="form-control checkbox" ng-model="invite.form.resources[k.id]">
                             </td>
                             <td style="padding-left:5px; padding-top:5px;">
-                                Add them to {{ k.community_profiles[global.location.slug].name }}
+                                Add them to {{ k.community_profiles[global.location.id].name }}
                             </td>
                         </tr>
                     </table>
